# social-environment-design

./: .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  config.json  pyproject.toml  requirements.txt  test.bash
sed/: __main__.py
sen/: __init__.py  __main__.py  apple_picking_game.py  huggingface_upload.py  optimized.py.wip  principal.py  principal_substrate.py  principal_utils.py  utils.py  vector_constructors.py
sen/neural/: agent_architectures.py
sen/principal/: __init__.py  substrate.py
